--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
 							<span class="image fit"><a href="http://runnr.site"><div class="image-container"><img class="screenshot" src="images/runnr.png" alt=""></img></div></a></span>
+							<br/>
 							<h3>RUNNR.SITE</h3>
 							<p>A full stack single page web application clone of MapMyRun that allows users to create and save running routes in San Francisco. </p>
 							<p>Technologies used: React/Redux, Javascript, Ruby on Rails, PostgresQL</p>
@@ -125,8 +126,9 @@
 						</div>
 						<div class="4u 12u$(medium)">
 							<span class="image fit"><a href="https://frankbi322.github.io/anti-gravity-run/"><div class="image-container"><img class="screenshot" src="images/Gravity.png" alt="" /></div></a></span>
+							<br/>
 							<h3>Gravity Run</h3>
-							<p>A 2D side scrolling game where players dodge obstacles by flipping gravity.</p>
+							<p>A 2D side-scrolling game where players dodge incoming obstacles by flipping gravity.</p>
 							<br/>
 							<p>Technologies used: Javascript, Easel.js</p>
 							<ul class="actions">
@@ -135,6 +137,7 @@
 						</div>
 						<div class="4u$ 12u$(medium)">
 							<span class="image fit"><a href="https://chrome.google.com/webstore/detail/nba-fantasy/mpcaiajpmmiealhpeoipjmkodgijmccm"><div class="image-container"><img class="bordered screenshot" src="images/nba.png" alt="" </img></div></a></span>
+							<br/>
 							<h3>NBA Player Lookup</h3>
 							<p>A Google Chrome extension that allows users to pull and display current season stats for any NBA player on a webpage.</p>
 							<br/>
@@ -490,7 +493,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; 2017 Frank Bi</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; 2017 Frank Bi</li>
 				</ul>
 			</section>
 
