update with new information

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
 						<div class="6u 12u$(medium)">
 							<ul class="major-icons">
 								<!-- <li><span class="icon style1 major fa-code"></span></li> -->
-								<li><img class="language-icon align-left slide-in" src="images/js.png"></img></li>
-								<li><img class="language-icon align-left slide-in" src="images/es6.png"></img></li>
 								<li><img class="language-icon align-left slide-in" src="images/ruby.png"></img></li>
 								<li><img class="language-icon align-left slide-in" src="images/rails.png"></img></li>
+								<li><img class="language-icon align-left slide-in" src="images/js.png"></img></li>
+								<li><img class="language-icon align-left slide-in" src="images/es6.png"></img></li>
+								<li><img class="language-icon align-left slide-in" src="images/java.png"></img></li>
 								<li><img class="language-icon align-left slide-in" src="images/react.png"></img></li>
 								<li><img class="language-icon align-left slide-in" src="images/redux.png"></img></li>
 								<li><img class="language-icon align-left slide-in" src="images/html.png"></img></li>
@@ -85,6 +86,7 @@
 							<ul>
 								<li>Ruby</li>
 								<li>Javascript</li>
+								<li>Java</li>
 								<li>SQL</li>
 								<li>HTML5/CSS3</li>
 							</ul>
